Make tests pass
- (after installation of vendor files)
- Added brams_map.v, Makefile

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,25 +71,16 @@
     "* There is no exception occuring during execution\n",
     "* The output matches the previous notebook output\n",
     "\n",
-    "It may be that a notebook shows a `FAILED` state and passes upon regeneration and the next autotest run. For strict comparison, remove `--nb-force-regen` below."
+    "It may be that a notebook shows a `FAILED` state and passes upon regeneration and the next autotest run. For strict comparison, remove `--nb-force-regen` below.\n",
+    "\n",
+    "Note that some tests may also fail when the above vendor files are not installed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m  The script chardetect is installed in '/home/pyosys/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  The scripts git-nbdiffdriver, git-nbdifftool, git-nbmergedriver, git-nbmergetool, hg-nbdiff, hg-nbdiffweb, hg-nbmerge, hg-nbmergeweb, nbdiff, nbdiff-web, nbdime, nbmerge, nbmerge-web and nbshow are installed in '/home/pyosys/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip3 install pytest-notebook >/dev/null"
    ]
@@ -147,16 +138,17 @@
       "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
       "cachedir: .pytest_cache\n",
       "NB force regen: True\n",
-      "rootdir: /tmp/tmppg00kxki, inifile: pytest.ini\n",
+      "rootdir: /tmp/tmpqdjn2ocw, inifile: pytest.ini\n",
       "plugins: notebook-0.6.0\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 4 items\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 5 items\n",
       "\n",
-      "test_ipycell.py::test_generic[ghdl_module_tests.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m            [ 25%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[ghdlsim_blink.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                [ 50%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[memory_wrapped_init.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m          [ 75%]\u001b[0m\n",
-      "test_ipycell.py::test_fixme[memory.ipynb] \u001b[33mxfail\u001b[0m\u001b[36m                          [100%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[ghdl_module_tests.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m            [ 20%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[ghdlsim_blink.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                [ 40%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[memory.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                       [ 60%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[memory_wrapped_init.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m          [ 80%]\u001b[0m\n",
+      "test_ipycell.py::test_fixme[uut0] \u001b[33mSKIPPED\u001b[0m\u001b[36m                                [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m\u001b[1m===================== 3 passed, 1 xfailed in 39.01 seconds =====================\u001b[0m\n"
+      "\u001b[32m\u001b[1m===================== 4 passed, 1 skipped in 43.36 seconds =====================\u001b[0m\n"
      ]
     }
    ],
@@ -170,6 +162,8 @@
     "    /cells/*/outputs/*/data/image/svg+xml\n",
     "nb_diff_replace =\n",
     "    /cells/*/outputs/*/data/text .*graphviz\\.files\\.Source.* \"GRAPH\"\n",
+    "    /cells/*/outputs/*/text \\[SigSpec.*\\] \"SIGSPEC\"\n",
+    "    /cells/*/outputs/*/text .*\\.vcd \"VCDFILE\"\n",
     "    /cells/*/outputs/*/data/text .*graphviz\\.dot\\.Digraph.* \"GRAPH\"\n",
     "    /cells/*/outputs/*/text .*-rw\\-r\\-\\-r\\-\\-.* \"FILE\"\n",
     "    /cells/*/outputs/*/text .*End.of.script.* \"YOSYS_TAG\"\n",
@@ -187,9 +181,9 @@
     "import tempfile\n",
     "\n",
     "        \n",
-    "VERIFIED  = [ \"ghdl_module_tests.ipynb\", \"ghdlsim_blink.ipynb\", \"memory_wrapped_init.ipynb\" ]\n",
+    "VERIFIED  = [ \"ghdl_module_tests.ipynb\", \"ghdlsim_blink.ipynb\", \"memory.ipynb\" , \"memory_wrapped_init.ipynb\" ]\n",
     "\n",
-    "KNOWN_TO_FAIL = [ \"memory.ipynb\" ]\n",
+    "KNOWN_TO_FAIL = [ ]\n",
     "\n",
     "@pytest.mark.parametrize(\"uut\", VERIFIED)\n",
     "def test_generic(nb_regression, uut):\n",
