Partially generate editable file links
- Generate markdown to resolve on binderhub
- Added hide/show snippet

--- a/tests/ghdl_module_tests.ipynb
+++ b/tests/ghdl_module_tests.ipynb
@@ -14,6 +14,62 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <script>\n",
+       "            function code_toggle_18409021473988351937() {\n",
+       "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
+       "            }\n",
+       "\n",
+       "            \n",
+       "        </script>\n",
+       "\n",
+       "        <a href=\"javascript:code_toggle_18409021473988351937()\">Toggle show/hide</a>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pgaux import hide_toggle\n",
+    "\n",
+    "\n",
+    "from graphviz import Digraph\n",
+    "dot = Digraph(\"Schematic\")\n",
+    "dot.attr('node', shape='parallelogram')\n",
+    "dot.node('A', 'MyHDL' ); dot.node('V', 'Vendor Sim Verilog'); \n",
+    "dot.attr('node', shape='box', style='filled', color='lightgrey')\n",
+    "dot.node('M', 'custom mapped Verilog'); dot.node('t', 'VCD trace'); \n",
+    "\n",
+    "dot.node('B', 'VHDL'); dot.node('C', 'Verilog'); dot.node('m', 'mapped Verilog')\n",
+    "\n",
+    "dot.attr('node', shape='ellipse', color='lightblue')\n",
+    "dot.node(\"G\", \"GHDL plugin\")\n",
+    "dot.node('Y', 'Yosys' );  dot.node('I', 'iverilog Simulator')\n",
+    "dot.attr('node', shape='doubleoctagon')\n",
+    "\n",
+    "dot.node('T', 'MyHDL test bench');\n",
+    "dot.edges(['AB', 'AC', 'BG', 'GY', 'Ym', 'YM', 'CI', 'VI', 'mI', 'MI', 'It', 'TI', 'IT', 'Tt'])\n",
+    "hide_toggle()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -185,31 +241,15 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f9be466a668>"
+       "<graphviz.dot.Digraph at 0x7f5a0c3798d0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from graphviz import Digraph\n",
-    "dot = Digraph(\"Schematic\")\n",
-    "dot.attr('node', shape='parallelogram')\n",
-    "dot.node('A', 'MyHDL' ); dot.node('V', 'Vendor Sim Verilog'); \n",
-    "dot.attr('node', shape='box', style='filled', color='lightgrey')\n",
-    "dot.node('M', 'custom mapped Verilog'); dot.node('t', 'VCD trace'); \n",
-    "\n",
-    "dot.node('B', 'VHDL'); dot.node('C', 'Verilog'); dot.node('m', 'mapped Verilog')\n",
-    "\n",
-    "dot.attr('node', shape='ellipse', color='lightblue')\n",
-    "dot.node(\"G\", \"GHDL plugin\")\n",
-    "dot.node('Y', 'Yosys' );  dot.node('I', 'iverilog Simulator')\n",
-    "dot.attr('node', shape='doubleoctagon')\n",
-    "\n",
-    "dot.node('T', 'MyHDL test bench');\n",
-    "dot.edges(['AB', 'AC', 'BG', 'GY', 'Ym', 'YM', 'CI', 'VI', 'mI', 'MI', 'It', 'TI', 'IT', 'Tt'])\n",
     "dot"
    ]
   },
@@ -234,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
