--- a/tests/memory.ipynb
+++ b/tests/memory.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Also, the yosys branch needs to be able to possibly infer the techmap according to the `IMPLEMENTATION` mode, see below.\n",
     "\n",
-    "To simulate against an inferred vendor model **post technology mapping**, you need to install the matching vendor simulation files yourself in this [directory](/tree/work/tests/lib/techlibs/ecp5) and edit [cells_sim.v](/edit/work/tests/lib/techlibs/ecp5/cells_sim.v)."
+    "To simulate against an inferred vendor model **post technology mapping**, you need to install the matching vendor simulation files yourself in [tests/lib/techlibs/ecp5](/tree/work/tests/lib/techlibs/ecp5) and edit [cells_sim.v](/edit/work/tests/lib/techlibs/ecp5/cells_sim.v)."
    ]
   },
   {
