Bringing back the generated links
- Merge generated edit links from 'experimental'
- pgaux fix for missing environment variable now done *right*
- Autotest regen

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,14 +37,95 @@
     "If you want to co-simulate against a vendor entity, like from an ECP5 FPGA, the current procedure for this architecture is as follows:\n",
     "\n",
     "1. Obtain the `*.v` files needed for simulation from your installed toolchain\n",
-    "+  Copy those files into the directory specified by the `ECP5_LIB` variable in [config.py](/edit/work/tests/config.py),\n",
+    "+  Copy those files into the directory specified by the `ECP5_LIB` variable in [config.py](#File-edit-links),\n",
     "see also Upload link below.\n",
     "\n",
-    "An 'enhanced' `cells_sim.v` file is added for example that includes some vendor simulation files (click to edit: [cells_sim.v](/edit/work/tests/lib/techlibs/ecp5/cells_sim.v)). You need to uncomment the lines on the bottom after installation of the necessary `*.v` files (use the `Upload` button on this [directory](/tree/work/tests/lib/techlibs/ecp5)).\n",
+    "An 'enhanced' `cells_sim.v` file is added for example that includes some vendor simulation files ([cells_sim.v](#File-edit-links)). You need to uncomment the lines on the bottom after installation of the necessary `*.v` files.\n",
     "\n",
     "**Note**: The vendor simulation files should not be processed by yosys, as they contain non-synthesizable Verilog\n",
     "statements. From the yosys side, these entities appear as blackbox cells, later on, the icarus verilog simulator\n",
     "includes them for proper co-simulation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File edit links\n",
+    "\n",
+    "We need to generate the edit links to run both on a local container and the binderhub service (the code to generate them is hidden by default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <script>\n",
+       "            function code_toggle_11427593030130115895() {\n",
+       "                $('div.cell.code_cell.rendered.selected').next().find('div.input').toggle();\n",
+       "            }\n",
+       "\n",
+       "            $('div.cell.code_cell.rendered.selected').find(\"div.input\").hide();\n",
+       "        </script>\n",
+       "\n",
+       "        <a href=\"javascript:code_toggle_11427593030130115895()\">Toggle show/hide next cell</a>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tests.pgaux import hide_toggle\n",
+    "hide_toggle(for_next = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Steps to **edit** files:\n",
+       "\n",
+       "  * Upload vendor files (use the `Upload` button): [tests/lib/techlibs/ecp5](None/tree/work/tests/lib/techlibs/ecp5)\n",
+       "\n",
+       "  * Check local configuration: <a href=\"/edit/work/tests/config.py\" target=\"_blank\">tests/config.py</a>\n",
+       "  * Uncomment include statements: <a href=\"/edit/work/tests/lib/techlibs/ecp5/cells_sim.v\" target=\"_blank\">tests/lib/techlibs/ecp5/cells_sim.v</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tests.pgaux import generate, Markdown\n",
+    "\n",
+    "d = (\"Upload vendor files (use the `Upload` button)\", 'tests/lib/techlibs/ecp5')\n",
+    "f = [ (\"Check local configuration\", 'tests/config.py'), (\"Uncomment include statements\", 'tests/lib/techlibs/ecp5/cells_sim.v')]\n",
+    "\n",
+    "s = generate(d, f)\n",
+    "Markdown(\"### Steps to **edit** files:\\n\\n\" + s)"
    ]
   },
   {
@@ -69,7 +150,10 @@
     "\n",
     "The GHDL yosys plugin is automatically compiled during the build process of this container.\n",
     "\n",
-    "Proceed to [GHDL overview](ghdl.ipynb)"
+    "Proceed to [GHDL overview](ghdl.ipynb) containing:\n",
+    "* Build and simulate blinky\n",
+    "* Synthesis and verification\n",
+    "* Download to ECP5 FPGA target"
    ]
   },
   {
@@ -116,20 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33m  The script chardetect is installed in '/home/pyosys/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "\u001b[33m  The scripts git-nbdiffdriver, git-nbdifftool, git-nbmergedriver, git-nbmergetool, hg-nbdiff, hg-nbdiffweb, hg-nbmerge, hg-nbmergeweb, nbdiff, nbdiff-web, nbdime, nbmerge, nbmerge-web and nbshow are installed in '/home/pyosys/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip3 install pytest-notebook >/dev/null"
    ]
@@ -159,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +260,7 @@
       "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
       "cachedir: .pytest_cache\n",
       "NB force regen: True\n",
-      "rootdir: /tmp/tmppg00kxki, inifile: pytest.ini\n",
+      "rootdir: /tmp/tmpttl05q9j, inifile: pytest.ini\n",
       "plugins: notebook-0.6.0\n",
       "\u001b[1mcollecting ... \u001b[0mcollected 4 items\n",
       "\n",
@@ -196,7 +269,7 @@
       "test_ipycell.py::test_generic[memory_wrapped_init.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m          [ 75%]\u001b[0m\n",
       "test_ipycell.py::test_fixme[memory.ipynb] \u001b[33mxfail\u001b[0m\u001b[36m                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m\u001b[1m===================== 3 passed, 1 xfailed in 39.01 seconds =====================\u001b[0m\n"
+      "\u001b[32m\u001b[1m===================== 3 passed, 1 xfailed in 51.00 seconds =====================\u001b[0m\n"
      ]
     }
    ],
