--- a/tests/ghdl_module_tests.ipynb
+++ b/tests/ghdl_module_tests.ipynb
@@ -25,14 +25,14 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_18409021473988351937() {\n",
+       "            function code_toggle_11427593030130115895() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_18409021473988351937()\">Toggle show/hide</a>\n",
+       "        <a href=\"javascript:code_toggle_11427593030130115895()\">Toggle show/hide</a>\n",
        "    "
       ],
       "text/plain": [
@@ -241,7 +241,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7f5a0c3798d0>"
+       "<graphviz.dot.Digraph at 0x7fb808303828>"
       ]
      },
      "execution_count": 2,
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
