--- a/tests/ghdlsim_blink.ipynb
+++ b/tests/ghdlsim_blink.ipynb
@@ -45,7 +45,7 @@
       "text/markdown": [
        "### Guide to edit files\n",
        "\n",
-       "  * VHDL example dir: [examples/vhdl](None/tree/work/examples/vhdl)\n",
+       "  * VHDL example dir: [examples/vhdl](/tree/work/examples/vhdl)\n",
        "\n",
        "  * Blinky one: <a href=\"/edit/work/examples/vhdl/blink.vhdl\" target=\"_blank\">examples/vhdl/blink.vhdl</a>\n",
        "  * Blinky two: <a href=\"/edit/work/examples/vhdl/blink2.vhdl\" target=\"_blank\">examples/vhdl/blink2.vhdl</a>"
@@ -85,23 +85,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm -f work-obj93.cf\n",
-      "rm -f *.o blinky blinky2\n",
-      "rm -f *.vcd\n",
-      "# Import our above example into the current 'work' cache \n",
-      "ghdl -i blink.vhdl\n",
-      "ghdl -i blink2.vhdl\n",
-      "# Analyze, elaborate and build an exe from the top level entity 'blink' \n",
-      "ghdl -m blinky\n",
-      "analyze blink.vhdl\n",
-      "elaborate blinky\n",
-      "ghdl -m blinky2\n",
-      "analyze blink2.vhdl\n",
-      "elaborate blinky2\n",
-      "./blinky --vcd=test.vcd --stop-time=40us # Run the simulation and output a wave file\n",
-      "./blinky:info: simulation stopped by --stop-time @40us\n",
-      "./blinky2 --vcd=test2.vcd --stop-time=40us\n",
-      "./blinky2:info: simulation stopped by --stop-time @40us\n"
+      "rm -f work-obj93.cf\r\n",
+      "rm -f *.o blinky blinky2\r\n",
+      "rm -f *.vcd\r\n",
+      "# Import our above example into the current 'work' cache \r\n",
+      "ghdl -i blink.vhdl\r\n",
+      "ghdl -i blink2.vhdl\r\n",
+      "# Analyze, elaborate and build an exe from the top level entity 'blink' \r\n",
+      "ghdl -m blinky\r\n",
+      "analyze blink.vhdl\r\n",
+      "elaborate blinky\r\n",
+      "ghdl -m blinky2\r\n",
+      "analyze blink2.vhdl\r\n",
+      "elaborate blinky2\r\n",
+      "./blinky --vcd=test.vcd --stop-time=40us # Run the simulation and output a wave file\r\n",
+      "./blinky:info: simulation stopped by --stop-time @40us\r\n",
+      "./blinky2 --vcd=test2.vcd --stop-time=40us\r\n",
+      "./blinky2:info: simulation stopped by --stop-time @40us\r\n"
      ]
     }
    ],
