First draft of ew2021 notebooks

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,6 +171,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* [Presentation](ew2021/index.ipynb) for embedded world conference 2021 digital"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Complex SoC design auxiliaries\n",
     "\n",
     "Large projects may require some framework to keep the maintenance overhead low, while having dependencies resolved during continous integration builds. This has lead to a few developments with respects to abstract property aware description languages.\n",
@@ -232,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -260,16 +267,15 @@
       "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
       "cachedir: .pytest_cache\n",
       "NB force regen: True\n",
-      "rootdir: /tmp/tmpttl05q9j, inifile: pytest.ini\n",
-      "plugins: notebook-0.6.0\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 4 items\n",
+      "rootdir: /tmp/tmp3in0xqzv, inifile: pytest.ini\n",
+      "plugins: notebook-0.6.1\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
       "\n",
-      "test_ipycell.py::test_generic[ghdl_module_tests.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m            [ 25%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[ghdlsim_blink.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                [ 50%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[memory_wrapped_init.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m          [ 75%]\u001b[0m\n",
-      "test_ipycell.py::test_fixme[memory.ipynb] \u001b[33mxfail\u001b[0m\u001b[36m                          [100%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[sync_logic.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                   [ 33%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[cosim.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                        [ 66%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[uart_loopback_test.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m           [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m\u001b[1m===================== 3 passed, 1 xfailed in 51.00 seconds =====================\u001b[0m\n"
+      "\u001b[32m\u001b[1m========================== 3 passed in 126.29 seconds ==========================\u001b[0m\n"
      ]
     }
    ],
@@ -282,8 +288,10 @@
     "nb_diff_ignore = \n",
     "    /cells/*/outputs/*/data/image/svg+xml\n",
     "nb_diff_replace =\n",
-    "    /cells/*/outputs/*/data/text .*graphviz\\.files\\.Source.* \"GRAPH\"\n",
-    "    /cells/*/outputs/*/data/text .*graphviz\\.dot\\.Digraph.* \"GRAPH\"\n",
+    "    /cells/*/outputs/*/data/text .*graphviz\\.files\\.Source.* \"GRAPH-FILE\"\n",
+    "    /cells/*/outputs/*/data/text .*graphviz\\.dot\\..* \"DOTGRAPH\"\n",
+    "    /cells/*/outputs/*/data/text .*myhdl._block.* \"BLOCK\"\n",
+    "    /cells/*/outputs/*/data/text \\-\\-.Date:.* \"DATE\"\n",
     "    /cells/*/outputs/*/text .*-rw\\-r\\-\\-r\\-\\-.* \"FILE\"\n",
     "    /cells/*/outputs/*/text .*End.of.script.* \"YOSYS_TAG\"\n",
     "\n",
@@ -292,28 +300,18 @@
     "import sys\n",
     "import importlib_resources\n",
     "\n",
-    "sys.path.append(\"/home/pyosys/work\")\n",
-    "sys.path.append(\"/home/pyosys/work/examples\")\n",
+    "sys.path.append(\"/home/pyosys/hdlplayground\")\n",
     "\n",
     "import pytest\n",
-    "import tests\n",
+    "import ew2021\n",
     "import tempfile\n",
     "\n",
-    "        \n",
-    "VERIFIED  = [ \"ghdl_module_tests.ipynb\", \"ghdlsim_blink.ipynb\", \"memory_wrapped_init.ipynb\" ]\n",
-    "\n",
-    "KNOWN_TO_FAIL = [ \"memory.ipynb\" ]\n",
+    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"uart_loopback_test.ipynb\" ]\n",
     "\n",
     "@pytest.mark.parametrize(\"uut\", VERIFIED)\n",
     "def test_generic(nb_regression, uut):\n",
-    "    with importlib_resources.path(tests, uut) as path:\n",
-    "        nb_regression.check(str(path))                \n",
-    "\n",
-    "@pytest.mark.xfail \n",
-    "@pytest.mark.parametrize(\"uut\", KNOWN_TO_FAIL)\n",
-    "def test_fixme(nb_regression, uut):\n",
-    "    with importlib_resources.path(tests, uut) as path:\n",
-    "        nb_regression.check(str(path))                              "
+    "    with importlib_resources.path(ew2021, uut) as path:\n",
+    "        nb_regression.check(str(path))                           "
    ]
   },
   {
