--- a/tests/ghdl_module_tests.ipynb
+++ b/tests/ghdl_module_tests.ipynb
@@ -241,7 +241,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x7fb808303828>"
+       "<graphviz.dot.Digraph at 0x7f9a181b9e48>"
       ]
      },
      "execution_count": 2,
